--- a/drones/.htaccess
+++ b/drones/.htaccess
@@ -1,5 +1,5 @@
 <Files ~ "^\.(htaccess|htpasswd)$">
 deny from all
 </Files>
-ErrorDocument 404 404.html
+ErrorDocument 404 notfound.html
 order deny,allow
